# aoc22

./: CMakeLists.txt  readme.md
source/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp
